comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-          <h1>Título do Site</h1>  
+          <h1>Cursos Grátis</h1>  
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere aperiam nihil repellendus, modi tempore quasi tempora quod dolore illum fugiat minus sapiente porro error velit. Quasi ullam maxime voluptate ipsam?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil sed fugit temporibus sunt! Omnis, dolor. Id, eaque laudantium ab ad minus tempora ipsam sed quis, rerum in atque. Vitae, nemo?</p>
         </article>
     </main>
 </body>
